@startuml
skinparam linetype ortho

entity users {
    *id: integer <<Generated>>
    --
    *username: varchar(50)
    *first_name: varchar(50)
    *last_name: varchar(50)
    *email: varchar(50)
    user_type: integer <<FK>>
}

entity user_types {
    *id: integer <<Generated>>
    --
    *name: varchar(50)
}

entity tours {
    *id: varchar(36)
    --
    *user_id: integer <<FK>>
    *title: varchar(100)
    *city: varchar(100)
    *country: varchar(100)
    *description: varchar(255)
    adult_ticket_price: integer
    child_ticket_price: integer
    infant_ticket_price: integer
    *meet_point: varchar(100)
    max_ticket_amount: integer
    available_tickets_count: integer
}

entity tour_times {
    *id: integer <<Generated>>
    --
    *tour_id: varchar(36) <<FK>>
    *date: date
    *begin_time: time
}

entity bookings {
    *tour_id: integer <<FK>>
    *user_id: integer <<FK>>
    --
    *adult_count: integer
    *child_count: integer
    *infant_count: integer
    *cost: integer
    book_date: datetime
}

users ||--o{ tours
users }o--|| user_types
'tours ||--o{ tour_times
'bookings }o--|| tour_times
bookings }o--|| tours
bookings }o--|| users

@enduml